--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,7 @@
     <nav class="navbar justify-content-center">
         <div class="logo me-5">
             <!--dont forget to link the logo to the homepage-->
-            <a href="http://127.0.0.1:5500/index.html"><img src="../images/SunCars-Logo.jpg" alt="SunCars Logo" style="width: 100px;"></a>
+            <a href="https://nsa16.github.io/"><img src="../images/SunCars-Logo.jpg" alt="SunCars Logo" style="width: 100px;"></a>
         </div>
         <div class="main-menu">
             <a href="../carsforrent.html">Cars for Rent</a>
