correct image path

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar justify-content-center">
         <div class="logo me-5">
             <!--dont forget to link the logo to the homepage-->
-            <a href="https://nsa16.github.io/"><img src="../images/SunCars-Logo.jpg" alt="SunCars Logo" style="width: 100px;"></a>
+            <a href="https://nsa16.github.io/"><img src="../miniproject/images/SunCars-Logo.jpg" alt="SunCars Logo" style="width: 100px;"></a>
         </div>
         <div class="main-menu">
             <a href="../miniproject/carsforrent.html">Cars for Rent</a>
@@ -124,7 +124,7 @@
             <!-- Slides -->
                 <div class="carousel-inner mb-5" style="border-radius: 15px;">
                     <div class="carousel-item active">
-                    <img src="../miniproject/images/Logos/ford-logo-rec.jpg" class="d-block w-100" alt="Ford Logo" />
+                    <img src="../miniproject/images/Logos/ford-logo-rec.png" class="d-block w-100" alt="Ford Logo" />
                     </div>
                     <div class="carousel-item">
                     <img src="../miniproject/images/Logos/toyota-logo-rec.png" class="d-block w-100" alt="Toyota Logo" />
