correct image path

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mini Project 1</title>
+    <title>SunCars</title>
     <!--
     <link rel="stylesheet" href="../miniproject/css/bootstrap.min.css">    
     <script src="../miniproject/js/bootstrap.bundle.min.js" type="text/javascript"></script>
