--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="slider carousel-indicators position-absolute">
                     <button type="button" data-bs-target="#popularcarmakes" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1">
                         <img class="d-block w-100"
-                        src="../images/Logos/ford-logo-rec.jpg" alt="Ford Logo" class="img-fluid" />
+                        src="../images/Logos/ford-logo-rec.png" alt="Ford Logo" class="img-fluid" />
                     </button>
         
                     <button type="button" data-bs-target="#popularcarmakes" data-bs-slide-to="1" aria-label="Slide 2">
