correct image path

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="slider carousel-indicators position-absolute">
                     <button type="button" data-bs-target="#popularcarmakes" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1">
                         <img class="d-block w-100"
-                        src="../images/Logos/ford-logo-rec.png" alt="Ford Logo" class="img-fluid" />
+                        src="../images/Logos/ford-logo-rec.jpg" alt="Ford Logo" class="img-fluid" />
                     </button>
         
                     <button type="button" data-bs-target="#popularcarmakes" data-bs-slide-to="1" aria-label="Slide 2">
@@ -124,7 +124,7 @@
             <!-- Slides -->
                 <div class="carousel-inner mb-5" style="border-radius: 15px;">
                     <div class="carousel-item active">
-                    <img src="../images/Logos/ford-logo-rec.png" class="d-block w-100" alt="Ford Logo" />
+                    <img src="../images/Logos/ford-logo-rec.jpg" class="d-block w-100" alt="Ford Logo" />
                     </div>
                     <div class="carousel-item">
                     <img src="../images/Logos/toyota-logo-rec.png" class="d-block w-100" alt="Toyota Logo" />
