responsive main menu

--- a/carsforrent.html
+++ b/carsforrent.html
@@ -16,7 +16,7 @@
     <nav class="navbar justify-content-center">
         <div class="logo me-5">
             <!--dont forget to link the logo to the homepage-->
-            <a href="https://nsa16.github.io/"><img src="../miniproject/images/SunCars-Logo.jpg" alt="SunCars Logo" style="width: 100px;"></a>
+            <a href="https://nsa16.github.io/"><img src="images/SunCars-Logo.jpg" alt="SunCars Logo" style="width: 100px;"></a>
         </div>
         <div class="main-menu">
             <a class="active" href="../carsforrent.html">Cars for Rent</a>
