another responsive commit

--- a/aboutus.html
+++ b/aboutus.html
@@ -29,13 +29,13 @@
     <div class="container about-us text-center">
         <h1>About <span style="color: #b97343; font-weight: 900;">Sun</span><span style="color: #2f4867; font-weight: 900;">Cars</span></h1>
         <div class="about-us-body mt-5 w-50 mx-auto">
-            <h2>SunCars is a trusted brand for car rentals and used cars for sale.</h2>
-            <h5>Even trusted by popular online car reviewers like Caco from AutoDeal and King Panda from Luxury Car Manila!</h5>
-            <h3>That, is something!</h3>
-            <p>With real car passion partnered with our goal to help others with car needs, we provide a fast solution with fairness, honesty, and integrity!</p>
-            <h3>Now! Our we have started our partnership with leading car brands to sell new cars to you!</h3>
-            <p>Several brands and their respective branches and locations have agreed into displaying their BRAND NEW CARS for sale.</p>
-            <p>When you let us know of your needs, we provide the brand new cars including the branches with the latest and best promotions!</p>
+            <h2 style="color: #b97343;">SunCars is a trusted brand for car rentals and used cars for sale.</h2>
+            <h5 style="color: #2f4867;">Even trusted by popular online car reviewers like Caco from AutoDeal and King Panda from Luxury Car Manila!</h5>
+            <h3 style="color: #b97343;">That, is something!</h3>
+            <p style="color: #2f4867;">With real car passion partnered with our goal to help others with car needs, we provide a fast solution with fairness, honesty, and integrity!</p>
+            <h3 style="color: #b97343;">Now! Our we have started our partnership with leading car brands to sell new cars to you!</h3>
+            <p style="color: #2f4867;">Several brands and their respective branches and locations have agreed into displaying their BRAND NEW CARS for sale.</p>
+            <p style="color: #b97343;">When you let us know of your needs, we provide the brand new cars including the branches with the latest and best promotions!</p>
         </div>
     </div>
     <div class="about-us-form">
