4th commit responsive

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h3>Fill out the form below to book!</h3>
             </div>
             <div>
-                <form action="https://www.google.com" target="_blank" method="get">
+                <form class="px-5" action="https://www.google.com" target="_blank" method="get">
                     <div class="w-100 mx-auto" style="margin-bottom: -3px;">
                         <label for="name" class="form-label"></label>
                         <input type="text" name="Name" placeholder="Your Name Here" class="form-control" id="name" maxlength="50">
