--- a/index.html
+++ b/index.html
@@ -26,68 +26,70 @@
             <a href="../contactus.html">Contact Us</a>
         </div>
     </nav>
-    <div class="home-cars-rent-sale">
-        <div class="home-cars-rent home-rent-sale">
-            <div>
-                <h1 class="h2-home">Get The Best Cars For The Best Price!</h1>
-            </div>
-            <div>
-                <h3>Awarded best car website in 2021!</h3>
-            </div>
-            <div class="mt-4">
-                <h3>Fill out the form below to book!</h3>
-            </div>
-            <div>
-                <form class="px-5" action="https://www.google.com" target="_blank" method="get">
-                    <div class="w-100 mx-auto" style="margin-bottom: -3px;">
-                        <label for="name" class="form-label"></label>
-                        <input type="text" name="Name" placeholder="Your Name Here" class="form-control" id="name" maxlength="50">
-                    </div>
-                    <div class="mb-0 w-100 mx-auto">
-                        <label for="phone" class="form-label"></label>
-                        <input type="text" name="Phone" placeholder="Contact Number" class="form-control" id="phone">
-                    </div>
-                    <div class="mb-3 w-100 mx-auto">
-                        <label for="email" class="form-label"></label>
-                        <input type="text" name="Email" placeholder="Email Address" class="form-control" id="email">
-                    </div>
-                        <div class="input-group mb-3 w-100">
-                            <div class="form-check pt-1 row d-flex w-100">
-                                <div class="col">
-                                    <input class="form-check-input mt-0" name="rentorbuy" type="radio" id="Rent" value="Rent">
-                                    <label class="form-check-label" for="Rent">I want to RENT a car</label>
-                                </div>
-                                <div class="col">
-                                    <input class="form-check-input mt-0" name="rentorbuy" type="radio" id="Buy" value="Buy">
-                                    <label class="form-check-label" for="Buy">I want to BUY a car</label>
+    <div class="container">
+        <div class="home-cars-rent-sale">
+            <div class="home-cars-rent home-rent-sale">
+                <div>
+                    <h1 class="h2-home">Get The Best Cars For The Best Price!</h1>
+                </div>
+                <div>
+                    <h3>Awarded best car website in 2021!</h3>
+                </div>
+                <div class="mt-4">
+                    <h3>Fill out the form below to book!</h3>
+                </div>
+                <div>
+                    <form class="px-5" action="https://www.google.com" target="_blank" method="get">
+                        <div class="w-100 mx-auto" style="margin-bottom: -3px;">
+                            <label for="name" class="form-label"></label>
+                            <input type="text" name="Name" placeholder="Your Name Here" class="form-control" id="name" maxlength="50">
+                        </div>
+                        <div class="mb-0 w-100 mx-auto">
+                            <label for="phone" class="form-label"></label>
+                            <input type="text" name="Phone" placeholder="Contact Number" class="form-control" id="phone">
+                        </div>
+                        <div class="mb-3 w-100 mx-auto">
+                            <label for="email" class="form-label"></label>
+                            <input type="text" name="Email" placeholder="Email Address" class="form-control" id="email">
+                        </div>
+                            <div class="input-group mb-3 w-100">
+                                <div class="form-check pt-1 row d-flex w-100">
+                                    <div class="col">
+                                        <input class="form-check-input mt-0" name="rentorbuy" type="radio" id="Rent" value="Rent">
+                                        <label class="form-check-label" for="Rent">I want to RENT a car</label>
+                                    </div>
+                                    <div class="col">
+                                        <input class="form-check-input mt-0" name="rentorbuy" type="radio" id="Buy" value="Buy">
+                                        <label class="form-check-label" for="Buy">I want to BUY a car</label>
+                                    </div>
                                 </div>
                             </div>
+                        <div class="input-group mb-0 w-100 mx-auto">
+                            <label class="input-group-text" for="carmaker">Select Car Brand</label>
+                            <select class="form-select" id="carmaker" name="Car-Brand">
+                                <option selected>Choose...</option>
+                            <!--<option value="Chery">Chery</option>
+                                <option value="Chevrolet">Chevrolet</option> -->
+                                <option value="Ford">Ford</option>
+                            <!--<option value="Hyundai">Hyundai</option>
+                                <option value="Isuzu">Isuzu</option>
+                                <option value="Kia">Kia</option>
+                                <option value="Mazda">Mazda</option>
+                                <option value="MG">MG</option> -->
+                                <option value="Mitsubishi">Mitsubishi</option>
+                            <!--<option value="Nissan">Nissan</option>
+                                <option value="Suzuki">Suzuki</option> -->
+                                <option value="Toyota">Toyota</option>
+                            <!--<option value="Volkswagen">Volkswagen</option> -->
+                            </select>
                         </div>
-                    <div class="input-group mb-0 w-100 mx-auto">
-                        <label class="input-group-text" for="carmaker">Select Car Brand</label>
-                        <select class="form-select" id="carmaker" name="Car-Brand">
-                            <option selected>Choose...</option>
-                        <!--<option value="Chery">Chery</option>
-                            <option value="Chevrolet">Chevrolet</option> -->
-                            <option value="Ford">Ford</option>
-                        <!--<option value="Hyundai">Hyundai</option>
-                            <option value="Isuzu">Isuzu</option>
-                            <option value="Kia">Kia</option>
-                            <option value="Mazda">Mazda</option>
-                            <option value="MG">MG</option> -->
-                            <option value="Mitsubishi">Mitsubishi</option>
-                        <!--<option value="Nissan">Nissan</option>
-                            <option value="Suzuki">Suzuki</option> -->
-                            <option value="Toyota">Toyota</option>
-                        <!--<option value="Volkswagen">Volkswagen</option> -->
-                        </select>
-                    </div>
-                    <div class="mb-3 ">
-                        <label for="more-info" class="form-label"></label>
-                        <input type="text" name="More-Info" placeholder="More Info" class="form-control w-100 mx-auto" id="more-info">
-                    </div>
-                    <button type="submit" class="btn text-white mb-5" style="width: 300px;">Submit</button>
-                  </form>
+                        <div class="mb-3 ">
+                            <label for="more-info" class="form-label"></label>
+                            <input type="text" name="More-Info" placeholder="More Info" class="form-control w-100 mx-auto" id="more-info">
+                        </div>
+                        <button type="submit" class="btn text-white mb-5" style="width: 300px;">Submit</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
