--- a/aboutus.html
+++ b/aboutus.html
@@ -61,7 +61,7 @@
                     <label for="more-info" class="form-label"></label>
                     <textarea placeholder="Question or Questions" rows="3" class="form-control w-100 mx-auto" id="more-info"></textarea>
                 </div>
-                <button type="submit" class="btn text-white mb-0 mt-3" style="width: 300px;">Submit</button>
+                <button type="submit" class="btn text-white mb-0 mt-3 w-50">Submit</button>
               </form>
         </div>
     </div>
