--- a/blog.html
+++ b/blog.html
@@ -29,15 +29,18 @@
 
     <div class="blogs container">
         <h1>Blogs/Reviews</h1>
-        <div>
-            
+        <div class="text-center mt-5 px-5">
+            <h2>We are currently compiling our reviews for new cars from several brands.</h2>
+            <h5>As we just landed the contracts from several brands and their respective branches, 
+                our reviews are currently in the works.
+            </h5>
         </div>
     </div>
     <div class="newsletter text-center">
         <h2>Get Notified</h2>
         <p class="w-50 mx-auto">Do you want to be the first to know about the latest automotive news/deals? Just subscribe with your email address and we will send you alerts on the most incredible news/deals as they happen.</p>
         <form action="https://www.google.com" target="_blank" method="get">
-            <div class="mb-3 w-50 mx-auto">
+            <div class="mb-3 w-25 mx-auto">
                 <label for="email" class="form-label"></label>
                 <input type="text" name="Email" placeholder="Email Address" class="form-control" id="email">
                 <button type="submit" class="btn text-white mb-5 mt-3" style="width: 150px;">Submit</button>
@@ -46,7 +49,7 @@
     </div>
 
     <!--Footer-->
-    <footer class="footer w-100 text-center">
+    <footer class="footer w-100 text-center" style="margin-bottom: 0px;">
         <div style="background-color: #bbbbbb;">
             <div class="pt-3">
                 <p><span style="color: #b97343; font-size:xx-large; font-weight: 900;">Sun</span><span style="color: #2f4867; font-size: xx-large; font-weight: 900;">Cars</span></p>
