last na cguro ni oi porbida - responsive1

--- a/contactus.html
+++ b/contactus.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar justify-content-center">
-        <div class="logo me-5">
+        <div class="logo mx-5">
             <!--dont forget to link the logo to the homepage-->
             <a href="https://nsa16.github.io/"><img src="images/SunCars-Logo.jpg" alt="SunCars Logo" style="width: 100px;"></a>
         </div>
@@ -26,7 +26,7 @@
             <a class="active" href="../contactus.html">Contact Us</a>
         </div>
     </nav>
-    <div class="container contact-us text-center">
+    <div class="container contact-us text-center w-75" style="max-width: 1024px;">
         <div>
             <h1>Contact Us</h1>
             <h2>Do you have questions in mind and doesn't want to fill out the booking form?</h2>
@@ -59,7 +59,11 @@
             </div>
         </div>
         <!-- Google Map-->
-        <div class="mapouter mx-auto mt-5"><div class="gmap_canvas"><iframe width="500" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=Mintal%20Davao%20City&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><style>.mapouter{position:relative;text-align:right;height:300px;width:500px;}</style><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:500px;}</style></div></div>
+        <div class="mapouter mx-auto mt-5">
+            <div class="gmap_canvas text-center w-75 mx-auto">
+                <iframe width="500" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=Mintal%20Davao%20City&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><style>.mapouter{position:relative;text-align:center;height:300px;width:500px;}</style><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:500px;}</style>
+            </div>
+        </div>
     </div>
     <!--Footer-->
     <footer class="footer w-100 text-center">
