--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@
 </head>
 <body class="about-rent">
     <nav class="navbar justify-content-center">
-        <div class="logo me-5">
+        <div class="logo mx-5">
             <!--dont forget to link the logo to the homepage-->
             <a href="https://nsa16.github.io/"><img src="images/SunCars-Logo.jpg" alt="SunCars Logo" style="width: 100px;"></a>
         </div>
