--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar justify-content-center">
-        <div class="logo me-5">
+        <div class="logo mx-5">
             <!--dont forget to link the logo to the homepage-->
             <a href="https://nsa16.github.io/"><img src="images/SunCars-Logo.jpg" alt="SunCars Logo" style="width: 100px;"></a>
         </div>
@@ -29,21 +29,21 @@
 
     <div class="blogs container">
         <h1>Blogs/Reviews</h1>
-        <div class="text-center mt-5 px-5">
+        <div class="text-center mt-5 w-100">
             <h2>We are currently compiling our reviews for new cars from several brands.</h2>
             <h5>As we just landed the contracts from several brands and their respective branches, 
                 our reviews are currently in the works.
             </h5>
         </div>
     </div>
-    <div class="newsletter text-center">
+    <div class="newsletter text-center px-5">
         <h2>Get Notified</h2>
-        <p class="w-50 mx-auto">Do you want to be the first to know about the latest automotive news/deals? Just subscribe with your email address and we will send you alerts on the most incredible news/deals as they happen.</p>
+        <p class="w-100 mx-auto" style="max-width: 1024px;">Do you want to be the first to know about the latest automotive news/deals? Just subscribe with your email address and we will send you alerts on the most incredible news/deals as they happen.</p>
         <form action="https://www.google.com" target="_blank" method="get">
-            <div class="mb-3 w-25 mx-auto">
+            <div class="mb-3 w-75 mx-auto">
                 <label for="email" class="form-label"></label>
-                <input type="text" name="Email" placeholder="Email Address" class="form-control" id="email">
-                <button type="submit" class="btn text-white mb-5 mt-3" style="width: 150px;">Submit</button>
+                <input type="text" name="Email" placeholder="Email Address" class="form-control w-75 mx-auto" id="email" style="max-width: 600px;">
+                <button type="submit" class="btn text-white mb-5 mt-3 text-center w-50 mx-auto" style="max-width: 300px;">Submit</button>
             </div>
         </form>
     </div>
