--- a/carsforrent.html
+++ b/carsforrent.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar justify-content-center">
-        <div class="logo me-5">
+        <div class="logo mx-5">
             <!--dont forget to link the logo to the homepage-->
             <a href="https://nsa16.github.io/"><img src="images/SunCars-Logo.jpg" alt="SunCars Logo" style="width: 100px;"></a>
         </div>
@@ -38,7 +38,7 @@
                 <h3>Fill out the form below to book!</h3>
             </div>
             <div class="text-center mx-auto">
-                <form action="https://www.google.com" target="_blank" method="get">
+                <form class="w-75 mx-auto" action="https://www.google.com" target="_blank" method="get">
                     <div class="w-100 mx-auto" style="margin-bottom: -3px;">
                         <label for="name" class="form-label"></label>
                         <input type="text" name="Name" placeholder="Your Name Here" class="form-control" id="name" maxlength="50">
