--- a/carsforsale.html
+++ b/carsforsale.html
@@ -86,7 +86,7 @@
                         <label for="more-info" class="form-label"></label>
                         <input type="text" name="More-Info" placeholder="More Info" class="form-control w-100 mx-auto" id="more-info">
                     </div>
-                    <button type="submit" class="btn text-white mb-5" style="width: 300px;">Submit</button>
+                    <button type="submit" class="btn text-white mb-5 w-50">Submit</button>
                   </form>
             </div>
         </div>
