--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             <a href="../contactus.html">Contact Us</a>
         </div>
     </nav>
-    <div class="container">
-        <div class="home-cars-rent-sale">
+        <div class="home-cars-rent-sale w-100">
             <div class="home-cars-rent home-rent-sale">
                 <div>
                     <h1 class="h2-home">Get The Best Cars For The Best Price!</h1>
@@ -87,12 +86,11 @@
                             <label for="more-info" class="form-label"></label>
                             <input type="text" name="More-Info" placeholder="More Info" class="form-control w-100 mx-auto" id="more-info">
                         </div>
-                        <button type="submit" class="btn text-white mb-5" style="width: 300px;">Submit</button>
+                        <button type="submit" class="btn text-white mb-5 w-50">Submit</button>
                     </form>
                 </div>
             </div>
         </div>
-    </div>
         <div class="container text-center mb-5 mt-5">
             <h2 class="h1 color-main">Popular Car Makes</h2>
         </div>
