--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <p>Doctor and Car Reviewer</p>
             <p class="text-muted w-50 mx-auto">
                 <img src="../images/Testi/quote.png" alt="quote" class="open-quote">
-                There is Riding in Tandem and then SUNCARS came. Sana hindi sila magbenta ng car insurance
+                Riding in Tandem was once the most viewed car review channel in youtube. Then, SUNCARS came. Sana hindi sila magbenta ng car insurance
                 para hindi namin sila maging kompitensya. Good job SUNCARS!
             </p>
             <p><img src="../images/Testi/5-star-review.png" alt="5 star review" class="star-review"></p>
