--- a/carsforrent.html
+++ b/carsforrent.html
@@ -97,8 +97,8 @@
     </div>
     <!--compare section-->
     <div class="row mt-5 container mx-auto">
-        <div class="carousel-container w-50 col">
-            <div class="carousel slide" data-interval="false" id="comparo">
+        <div class="carousel-container w-50 col col-sm-6">
+            <div class="carousel comparo-row slide" data-interval="false" id="comparo">
                 <!--<ol class="carousel-indicators">
                     <li data-bs-target="#comparo" data-bs-slide-to="0" class="active"></li>
                     <li data-bs-target="#comparo" data-bs-slide-to="1"></li>
@@ -135,7 +135,7 @@
                 </a>
             </div>
         </div>
-        <div class="carousel-container w-50 col">
+        <div class="carousel-container w-50 col col-sm-6">
             <div class="carousel slide" data-interval="false" id="comparo1">
                 <!--<ol class="carousel-indicators">
                     <li data-bs-target="#comparo1" data-bs-slide-to="0" class="active"></li>
