mitsu and toyo added

--- a/carsforsale.html
+++ b/carsforsale.html
@@ -115,14 +115,14 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../images/Sale/Used Cars for sale/MITSUBISHI MONTERO SPORT GT/Main.jpg" alt="mitsubishi montero sport" class="d-block w-50 mx-auto">
+                        <a href="mitsubishi.html"><img src="../images/Sale/Used Cars for sale/MITSUBISHI MONTERO SPORT GT/Main.jpg" alt="mitsubishi montero sport" class="d-block w-50 mx-auto"></a>
                         <div class="carousel-caption d-none d-md-block">
                             <h5 style="color: black;">MITSUBISHI MONTERO SPORT GT 2020</h5>
                             <p style="color: black;">₱1,400,000</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../images/Sale/Used Cars for sale/TOYOTA FOURTUNER V/Main.jpg" alt="toyota fortuner" class="d-block w-50 mx-auto">
+                        <a href="toyota.html"><img src="../images/Sale/Used Cars for sale/TOYOTA FOURTUNER V/Main.jpg" alt="toyota fortuner" class="d-block w-50 mx-auto"></a>
                         <div class="carousel-caption d-none d-md-block">
                             <h5 style="color: black;">TOYOTA FORTUNER V 2019</h5>
                             <p style="color: black;">₱850,000</p>
