textarea on main form

--- a/carsforrent.html
+++ b/carsforrent.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="more-info" class="form-label"></label>
-                        <input type="text" name="More-Info" placeholder="More Info" class="form-control w-100 mx-auto" id="more-info">
+                        <textarea placeholder="Additional Info" rows="3" class="form-control w-100 mx-auto" id="more-info"></textarea>
                     </div>
                     <button type="submit" class="btn text-white mb-5 w-50">Submit</button>
                   </form>
